WRP-2108 attempted a fix on this issue related to the modal body causing the header to overlap

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -1,3 +1,10 @@
+.modal-body {
+    position: relative;
+    padding: 15px;
+	float:left;
+	display:block;width: 100%;
+	
+}
 html {
     height: 100%;
 	width:100%;
